@@ -1,5 +1,6 @@
 2013-07-25 pchang9@cs.wisc.edu
 	* moz#897255 Wasted work in line_uniq
+	* moz#897780 Wasted work in SuggestMgr::twowords
 
 2013-07-25 Caolán McNamara <caolanm at LibO>:
 	* hunspell#167 layout problems with long lines
